# Monte-Carlo-Portfolio-Lab

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
notebooks/: 01_methodology_and_validation.ipynb
screenshots/: README.md
src/monte_carlo_portfolio_lab/: __init__.py  config.py  data.py  exceptions.py  metrics.py  portfolio.py  returns.py  scenarios.py  simulation.py  visualization.py
tests/: conftest.py  test_data.py  test_metrics.py  test_portfolio.py  test_returns.py  test_scenarios.py  test_simulation.py  test_visualization.py
