[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-carlo-portfolio-lab"
version = "0.1.0"
description = "A Streamlit portfolio scenario analysis and Monte Carlo risk simulation platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Raphael Azerad" }]
dependencies = [
    "streamlit>=1.34,<2",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "plotly>=5.20,<6",
    "yfinance>=0.2.40,<1",
    "joblib>=1.3,<2",
]

[project.optional-dependencies]
dev = [
    "black>=24.4,<25",
    "ruff>=0.4,<1",
    "pytest>=8.2,<9",
    "pytest-cov>=5,<6",
    "nbformat>=5.10,<6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=monte_carlo_portfolio_lab --cov-report=term-missing"
testpaths = ["tests"]
